# rtfw-webapp-sample-rs

./: .gitignore  Cargo.toml  README.md  config.toml
pages/: 404.html  index.html  paste.html  send.html
src/: config.rs  main.rs  routes.rs  utils.rs
src/assets/: 404_phrases.txt
src/scripts/: paste.js  send.js
src/styles/: main.css
src/views/: 404.html  index.html  paste.html  send.html
