[package]
name = "rtfw_webapp_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.6"
rtfw_http = { git = "https://github.com/RTFW-rs/rtfw-http-rs.git" }
log = "0.4.26"
mime_guess = "2.0.5"
rand = "0.9.0"
serde = { version = "1.0.218", features = [ "derive" ] }
serde_json = "1.0.140"
chrono = "0.4.40"
regex = "1.11.1"
toml = "0.8.20"
